test/param/errors/param32BitFloat.chpl
param p1: real(32);
param p2: imag(32);

writeln(p1);
writeln(p2);

